# lastfm-discord-presence

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: discord.rs  main.rs
