[package]
name = "lastfm-discord-presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
discord-sdk = "0.3.0"
lastfm-rs = "0.5.0"
tokio = {version = "1.19.2", features = ["full"] }
tracing = "0.1.35"